RESOLVED FIXED312607
[JSC] Expensive header files slow full build
https://bugs.webkit.org/show_bug.cgi?id=312607
Summary [JSC] Expensive header files slow full build
Dan Glastonbury
Reported 2026-04-17 15:15:42 PDT
JavaScriptCore has some heavy header files that profiling shows slows down a full build.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-17 15:15:47 PDT
Dan Glastonbury
Comment 2 2026-04-17 15:25:49 PDT
EWS
Comment 3 2026-04-20 16:18:26 PDT
Committed 311631@main (744271668d05): <https://commits.webkit.org/311631@main> Reviewed commits have been landed. Closing PR #63006 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.